base/httpbin/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  revisionHistoryLimit: 1
  template:
    spec:
      enableServiceLinks: false
      serviceAccountName: httpbin
      containers:
        - name: httpbin
          image: docker.io/kennethreitz/httpbin:latest
          ports:
            - name: http
              containerPort: 80
