base/httpbin/virtualservice.k8s.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin.k.seankhliao.com
  gateways:
    - httpbin
  http:
    - route:
        - destination:
            host: httpbin.httpbin.svc.cluster.local
            port:
              number: 80
